--- a/resources/css/own.css
+++ b/resources/css/own.css
@@ -17,3 +17,5 @@
     max-width: 330px;
     padding: 15px;
 }
+
+.centerErrorPage {text-align: center; margin-left: auto; margin-right: auto; margin-bottom: auto; margin-top: auto;}
